k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: joshua-portfolio
  labels:
    name: joshua-portfolio
    environment: production
